fix select band members and dark mode

--- a/MusicPlayer/MusicPlayer/static/css/Home.css
+++ b/MusicPlayer/MusicPlayer/static/css/Home.css
@@ -1,29 +1,75 @@
-﻿:root {
+﻿@media (prefers-color-scheme: dark) {
+  /* Estilos para o tema escuro aqui */
+
+  body {
+    color: #eee !important;
+    background: #121212 !important;
+  }
+  a {
+    color: #eee !important;
+  }
+
+  .form_tp input[type="text"] {
+    border: 1px solid #ced4da;
+    color: #ffffff;
+  }
+
+  .table_playlist th {
+    color: #ffffff!important;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  /* Estilos para o tema claro aqui */
+
+  body {
+    color: #eee !important;
+    background: #121212 !important;
+  }
+  a {
+    color: #eee !important;
+  }
+  .container_tp,
+  .container_tp a {
+    color: #000 !important;
+  }
+  .form_tp input[type="text"] {
+    border: 1px solid #ced4da;
+    color: #ffffff;
+  }
+  .table_playlist th {
+    color: #ffffff!important;
+  }
+}
+
+:root {
   font-size: 16px !important;
   font-family: "Century Gothic", "URW Gothic", "Franklin Gothic Medium",
     "Arial Narrow", Arial, sans-serif !important;
+
   --text-primary: #b6b6b6 !important;
   --text-secondary: #ececec !important;
   --bg-primary: #23232e !important;
   --bg-secondary: #141418 !important;
+
   --transition-speed: 600ms !important;
 }
 
-html, body {
-  height: 100%!important;
-  margin: 0!important;
-  padding: 0!important;
+html,
+body {
+  height: 100% !important;
+  margin: 0 !important;
+  padding: 0 !important;
 }
 
 body {
-  background: url("../images/bg.jpg") no-repeat center center fixed!important;
-  background-size: cover!important;
-  color: white!important;
+  background: url("../images/bg.jpg") no-repeat center center fixed !important;
+  background-size: cover !important;
 }
 
 body::before {
-  content: ""!important;
-  position: fixed!important;
+  content: "" !important;
+  position: fixed !important;
   top: 0;
   left: 0;
   width: 100%;
@@ -40,9 +86,9 @@ h1 {
 }
 
 h2 {
-  font-size: 1.5rem!important;
-  font-weight: 600!important;
-  padding: 1rem 0rem!important;
+  font-size: 1.5rem !important;
+  font-weight: 600 !important;
+  padding: 1rem 0rem !important;
 }
 
 main {
@@ -100,9 +146,7 @@ body::-webkit-scrollbar-thumb {
 
 .form_tp input[type="text"] {
   background-color: transparent;
-  border: 1px solid #ced4da;
   border-radius: 0.25rem;
-  color: #ffffff;
   padding: 0.375rem 0.75rem;
   height: auto;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -139,16 +183,16 @@ body::-webkit-scrollbar-thumb {
 }
 
 .bottom_tp {
-    height: 12%;
-    width: 90%;
-    position: fixed;
-    bottom: 0;
-    background-color: #23232e;
-    border-radius: 0.3rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  height: 12%;
+  width: 90%;
+  position: fixed;
+  bottom: 0;
+  background-color: #23232e;
+  border-radius: 0.3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 #ProgressBar {
@@ -184,9 +228,8 @@ figure {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
 }
 
-.tableHead{
+.tableHead {
   font-size: large;
 }
